ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mazetasks-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: mazetasks-backend-service
                port:
                  number: 8080

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mazetasks-backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: mazetasks-frontend-service
                port:
                  number: 80
